--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -23,7 +23,19 @@ body:after {
   color: white;
 }
 
+.App {
+  position: relative;
+  z-index: 1;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.nickname {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  padding: 2px 4px;
+  font-size: 10px;
 }
