--- a/Front/src/BlackjackUI/index.module.scss
+++ b/Front/src/BlackjackUI/index.module.scss
@@ -7,6 +7,7 @@
   left: 0;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -14,8 +15,15 @@
 .WaitScreen {
 }
 .HitScreen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
 .BetScreen {
 }
 .ResultScreen {
+}
+
+.NewPlayerJoined {
 }
