--- a/Front/src/SlotsUI/index.module.scss
+++ b/Front/src/SlotsUI/index.module.scss
@@ -11,3 +11,27 @@
   align-items: center;
   justify-content: center;
 }
+
+.slotsUIControlsButton {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.slotUIBetScreen {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  padding: 0.4rem 0.8rem;
+  justify-content: center;
+}
+
+.slotsUIBalance {
+}
+
+.slotsUIBet {
+}
