--- a/Front/src/UI/CasinoChip/index.module.scss
+++ b/Front/src/UI/CasinoChip/index.module.scss
@@ -15,6 +15,17 @@
   user-select: none;
 }
 
+.Chipxs {
+  width: 20px;
+  height: 20px;
+
+  border-width: 4px;
+
+  &:before {
+    border-width: 4px;
+  }
+}
+
 .Chip::before {
   content: "";
   position: absolute;
