--- a/Front/src/UI/Menu/Menu.module.scss
+++ b/Front/src/UI/Menu/Menu.module.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   gap: 16px;
 
-  background-color: rgba(255, 255, 255, 0.33);
+  background-color: rgba(#0b0f1a, 0.33);
   backdrop-filter: blur(4px);
 
   h3 {
