--- a/Front/src/UI/Auth/index.module.scss
+++ b/Front/src/UI/Auth/index.module.scss
@@ -5,3 +5,12 @@
   width: 100%;
   height: 100vh;
 }
+
+.AuthSignWallet {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
