--- a/Front/src/UI/Chat/index.module.scss
+++ b/Front/src/UI/Chat/index.module.scss
@@ -8,7 +8,7 @@
   gap: 8px;
 
   padding: 8px;
-  background-color: rgba(255, 255, 255, 0.33);
+  background-color: rgba(#1f0036, 0.33);
   border-radius: 10px;
   font-family: "Courier New", Courier, monospace;
 }
@@ -33,13 +33,14 @@
 .ChatMessageTimestamp {
   display: inline-block;
   margin-right: 4px;
-  color: red;
+  color: #ffd700;
 }
 
 .ChatMessageNickname {
   display: inline-block;
   margin-right: 4px;
   font-weight: 700;
+  color: #009d6b;
 }
 
 .ChatMessageValue {
