--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -52,9 +52,13 @@ code {
 .chat-bubble {
   background: white;
   color: black;
-  padding: 0.5rem 1rem;
-  border-radius: 1rem;
-  font-size: 0.9rem;
+  padding: 2px;
+  border-radius: 6rem;
+  font-size: 7px;
+  max-width: 25ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Target scrollbar for WebKit browsers */
