--- a/Front/src/UI/Menu/Menu.module.scss
+++ b/Front/src/UI/Menu/Menu.module.scss
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 99;
+  z-index: 9999;
 
   display: flex;
   align-items: center;
@@ -14,6 +14,8 @@
 
   background-color: rgba(#0b0f1a, 0.33);
   backdrop-filter: blur(4px);
+
+  pointer-events: all;
 
   h3 {
     margin: 0 0 4px 0;
